unpackaged/main/default/objects/CMPL123__X123_Report_Section__c/CMPL123__X123_Report_Section__c.object-meta.xml
<CustomObject>
    <label>Report Template Section</label>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Template Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>