unpackaged/main/default/objects/CMPL123__X123_Report_Section__c/fields/CMPL123__Fields__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Fields__c</fullName>
        <description>Related Fields</description>
        <inlineHelpText>Related Fields</inlineHelpText>
        <label>Fields</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </CustomField>