unpackaged/main/default/objects/CMPL123__X123_Report_Section__c/fields/CMPL123__Order__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Order__c</fullName>
        <description>Section Order</description>
        <inlineHelpText>Section Order</inlineHelpText>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>