unpackaged/main/default/objects/CMPL123__X123_Report_Section__c/fields/CMPL123__Relationship_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Relationship_Name__c</fullName>
        <description>Relationship Name</description>
        <label>Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>