unpackaged/main/default/objects/CMPL123__X123_Report_Section__c/fields/CMPL123__Report_Template__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Report_Template__c</fullName>
        <description>Report Template</description>
        <label>Report Template</label>
        <referenceTo>CMPL123__X123_Report_Template__c</referenceTo>
        <relationshipName>Report_Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>