unpackaged/main/default/objects/CMPL123__X123_Report_Section__c/fields/CMPL123__Show_Border__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Show_Border__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show related list table border</description>
        <label>Show Border</label>
        <type>Checkbox</type>
    </CustomField>