unpackaged/main/default/objects/CMPL123__X123_Report_Section__c/fields/CMPL123__Show_Section_Header__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Show_Section_Header__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show Section Header</description>
        <inlineHelpText>Show Section Header</inlineHelpText>
        <label>Show Section Header</label>
        <type>Checkbox</type>
    </CustomField>