unpackaged/main/default/objects/CMPL123__X123_Report_Section__c/fields/CMPL123__Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Type__c</fullName>
        <description>Section/Related List</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Section</fullName>
                </value>
                <value>
                    <fullName>Related List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>